refact refresh token
